--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -152,4 +152,4 @@ jobs:
           context: ./gateway/
           push: true
           # Тут вместо username должен быть ваш логин на Docker Hub
-          tags: ${{ DOCKER_USERNAME }}/taski_gateway:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/taski_gateway:latest
